Fix include guards in //device/usb

This patch updates the include guards for all .h files in //device/usb

BUG=728444

Review-Url: https://codereview.chromium.org/2923773002
Cr-Commit-Position: refs/heads/master@{#477882}