device/usb/fake_usb_device_handle.h
@@ -3,6 +3,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
+#ifndef DEVICE_USB_FAKE_USB_DEVICE_HANDLE_H_
+#define DEVICE_USB_FAKE_USB_DEVICE_HANDLE_H_
+
 #include "device/usb/usb_device_handle.h"
 
 namespace device {
@@ -80,3 +83,5 @@ class FakeUsbDeviceHandle : public UsbDeviceHandle {
 };
 
 }  // namespace device
+
+#endif  // DEVICE_USB_FAKE_USB_DEVICE_HANDLE_H_
