device/usb/usb_device_linux.h
@@ -3,8 +3,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#ifndef DEVICE_USB_USB_DEVICE_IMPL_H_
-#define DEVICE_USB_USB_DEVICE_IMPL_H_
+#ifndef DEVICE_USB_USB_DEVICE_LINUX_H_
+#define DEVICE_USB_USB_DEVICE_LINUX_H_
 
 #include <stdint.h>
 
@@ -77,4 +77,4 @@ class UsbDeviceLinux : public UsbDevice {
 
 }  // namespace device
 
-#endif  // DEVICE_USB_USB_DEVICE_IMPL_H_
+#endif  // DEVICE_USB_USB_DEVICE_LINUX_H_
