device/usb/usb_service_impl.h
@@ -3,6 +3,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
+#ifndef DEVICE_USB_USB_SERVICE_IMPL_H_
+#define DEVICE_USB_USB_SERVICE_IMPL_H_
+
 #include "device/usb/usb_service.h"
 
 #include <stddef.h>
@@ -121,3 +124,5 @@ class UsbServiceImpl :
 };
 
 }  // namespace device
+
+#endif  // DEVICE_USB_USB_SERVICE_IMPL_H_
