device/usb/usb_service_linux.h
@@ -3,6 +3,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
+#ifndef DEVICE_USB_USB_SERVICE_LINUX_H_
+#define DEVICE_USB_USB_SERVICE_LINUX_H_
+
 #include <list>
 #include <memory>
 #include <unordered_map>
@@ -62,3 +65,5 @@ class UsbServiceLinux : public UsbService {
 };
 
 }  // namespace device
+
+#endif  // DEVICE_USB_USB_SERVICE_LINUX_H_
