device/usb/usb_service_win.h
@@ -3,6 +3,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
+#ifndef DEVICE_USB_USB_SERVICE_WIN_H_
+#define DEVICE_USB_USB_SERVICE_WIN_H_
+
 #include "device/usb/usb_service.h"
 
 #include <list>
@@ -62,3 +65,5 @@ class UsbServiceWin : public DeviceMonitorWin::Observer, public UsbService {
 };
 
 }  // namespace device
+
+#endif  // DEVICE_USB_USB_SERVICE_WIN_H_
